basic chat functionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Socket.IO</h1>
-    <button id="boom">Boom</button>
+    <input type="text" id="inpMsg">
+    <button id="msgSend">Send</button>
+    <ul id="msgList"></ul>
+
 </body>
 </html>
