--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+        crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
 </head>
 <body>
     <h1>Socket.IO</h1>
-    <input type="text" id="inpMsg">
-    <button id="msgSend">Send</button>
-    <ul id="msgList"></ul>
+    <div id="login">
+        <input type="text" id="userName" placeholder="Username">
+        <input type="password" id="password" placeholder="password">
+        <button id="loginBtn">START</button>
+    </div>
+
+    <div id="chat">
+        <input type="text" id="sendMsgTo" placeholder="Send msg to (default everyone)">
+        <input type="text" id="userMsg">
+        <button id="sendMsg">SEND</button>
+        <ul id="chatMsg"></ul>
+    </div>
+    
 
 </body>
 </html>
